--- a/personal-finance-tracker-frontend/src/app/expense-form/expense-form.component.html
+++ b/personal-finance-tracker-frontend/src/app/expense-form/expense-form.component.html
@@ -4,11 +4,12 @@
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="description">Description</label>
-        <input
-          id="description"
-          name="description"
-          [(ngModel)]="expenseData.description"
-          type="text"
+        <input 
+          type="text" 
+          id="description" 
+          [(ngModel)]="expenseData.description" 
+          name="description" 
+          class="form-control" 
           required
         >
       </div>
