--- a/personal-finance-tracker-frontend/src/app/app.component.html
+++ b/personal-finance-tracker-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
-<div class="content">
-  <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<ng-container *ngIf="isLoggedIn()">
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</ng-container>
+
