--- a/personal-finance-tracker-frontend/src/app/income-form/income-form.component.html
+++ b/personal-finance-tracker-frontend/src/app/income-form/income-form.component.html
@@ -1,12 +1,12 @@
 <form (submit)="onSubmit()">
     <label for="amount">Amount</label>
-    <input type="number" id="amount" [(ngModel)]="income.amount" name="amount">
+    <input type="number" id="amount" [(ngModel)]="incomeData.amount" name="amount">
   
     <label for="description">Description</label>
-    <input type="text" id="description" [(ngModel)]="income.description" name="description">
+    <input type="text" id="description" [(ngModel)]="incomeData.description" name="description">
   
     <label for="incomeDate">Date</label>
-    <input type="date" id="incomeDate" [(ngModel)]="income.incomeDate" name="incomeDate">
+    <input type="date" id="date" [(ngModel)]="incomeData.date" name="date">
   
     <button type="submit">Add Income</button>
 </form>  
